# Clio

./: .coverage  .env.example  .gitignore  .progress.json  AGENTS.md  CHANGELOG.md  LICENSE  README.en.md  README.md  ROADMAP.md  config.example.yaml  main.py  package-lock.json  package.json  project.yaml  projects.json.tmp.572e29fe  pyproject.toml  requirements-locked.txt  requirements-whisper.txt  requirements.txt  serve.ps1  serve.sh  setup.ps1  setup.sh  video_analysis.py  vitest.config.js  whisper-install.ps1  whisper-install.sh
.githooks/: pre-commit  pre-commit.py  pre-push
.github/workflows/: test.yml
clio/: __init__.py  __main__.py  _constants.py  _str_enum.py  analyze.py  analyze_windows.py  compress.py  cut.py  doctor.py  gpmf.py  identity.py  index.py  log.py  main.py  pipeline.py  plan_model.py  plan_readiness.py  processing_state.py  progress.py  prompt_overrides.py  prompts.py  ratelimit.py  schema.py  session_log.py  shutdown.py  split.py  transcribe.py  utils.py  vmeta.py  whisper_cache.py  whisper_cli.py
clio/ai/: __init__.py  base.py  factory.py  gemini.py  openai_compat.py  token_usage.py
clio/config/: __init__.py  descriptions.py  enums.py  loader.py  models.py  parsers.py  (+1 more)
docs/: CONVENTIONS.md  cli-reference.md  project.example.yaml
templates/: trip_context.md  vlog_template.md
vlog_tool/: __init__.py  _constants.py  analyze.py  compress.py  config.py  cut.py  identity.py  log.py  pipeline.py  processing_state.py  progress.py  prompts.py  ratelimit.py  schema.py  shutdown.py  split.py  transcribe.py  utils.py  vmeta.py  whisper_cli.py
(+431 files in other folders)
