[project]
name = "clio"
version = "0.1.0"
description = "AI preprocessing pipeline for travel vlog editing"
requires-python = ">=3.11"

[project.scripts]
clio = "clio.main:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.pytest.ini_options]
testpaths = ["clio/tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
